--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   flutter_riverpod: ^0.12.1
   http: ^0.12.2
+  freezed_annotation: ^0.12.0
+  json_annotation: ^3.1.1
 
 dev_dependencies:
+  build_runner: ^1.10.6
+  freezed: ^0.12.3
+  json_serializable: ^3.5.0
+
   flutter_test:
     sdk: flutter
 
